// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavLinks authed Sourcegraph.com /foo 1`] = `
<ul
  class="nav-links nav align-items-center pl-2 pr-1"
>
  <li
    class="nav-item d-sm-none"
  >
    <a
      class="nav-link"
      href="/search"
    >
      Search
    </a>
  </li>
  <li
    class="nav-item"
  >
    <a
      class="nav-link btn btn-link px-1 text-decoration-none d-flex align-items-center"
      href="/extensions"
    >
      <svg
        class="mdi-icon icon-inline d-lg-none"
        data-tooltip="Extensions"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M22,13.5C22,15.26 20.7,16.72 19,16.96V20A2,2 0 0,1 17,22H13.2V21.7A2.7,2.7 0 0,0 10.5,19C9,19 7.8,20.21 7.8,21.7V22H4A2,2 0 0,1 2,20V16.2H2.3C3.79,16.2 5,15 5,13.5C5,12 3.79,10.8 2.3,10.8H2V7A2,2 0 0,1 4,5H7.04C7.28,3.3 8.74,2 10.5,2C12.26,2 13.72,3.3 13.96,5H17A2,2 0 0,1 19,7V10.04C20.7,10.28 22,11.74 22,13.5M17,15H18.5A1.5,1.5 0 0,0 20,13.5A1.5,1.5 0 0,0 18.5,12H17V7H12V5.5A1.5,1.5 0 0,0 10.5,4A1.5,1.5 0 0,0 9,5.5V7H4V9.12C5.76,9.8 7,11.5 7,13.5C7,15.5 5.75,17.2 4,17.88V20H6.12C6.8,18.25 8.5,17 10.5,17C12.5,17 14.2,18.25 14.88,20H17V15Z"
        />
      </svg>
      <svg
        class="mdi-icon icon-inline d-none d-lg-inline-block"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M22,13.5C22,15.26 20.7,16.72 19,16.96V20A2,2 0 0,1 17,22H13.2V21.7A2.7,2.7 0 0,0 10.5,19C9,19 7.8,20.21 7.8,21.7V22H4A2,2 0 0,1 2,20V16.2H2.3C3.79,16.2 5,15 5,13.5C5,12 3.79,10.8 2.3,10.8H2V7A2,2 0 0,1 4,5H7.04C7.28,3.3 8.74,2 10.5,2C12.26,2 13.72,3.3 13.96,5H17A2,2 0 0,1 19,7V10.04C20.7,10.28 22,11.74 22,13.5M17,15H18.5A1.5,1.5 0 0,0 20,13.5A1.5,1.5 0 0,0 18.5,12H17V7H12V5.5A1.5,1.5 0 0,0 10.5,4A1.5,1.5 0 0,0 9,5.5V7H4V9.12C5.76,9.8 7,11.5 7,13.5C7,15.5 5.75,17.2 4,17.88V20H6.12C6.8,18.25 8.5,17 10.5,17C12.5,17 14.2,18.25 14.88,20H17V15Z"
        />
      </svg>
      <span
        class="d-none d-lg-inline-block ml-1"
      >
        Extensions
      </span>
    </a>
  </li>
  <li
    class="nav-item"
  >
    <a
      class="nav-link btn btn-link px-1 text-decoration-none d-flex align-items-center"
      href="/campaigns"
    >
      <svg
        class="icon-inline d-lg-none"
        fill="currentColor"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M4.5 5.5a1 1 0 100-2 1 1 0 000 2zm0 1.5a2.5 2.5 0 100-5 2.5 2.5 0 000 5z"
          fill-rule="evenodd"
        />
        <path
          d="M13.117 2.967h4v4h-4v-4zM13.117 8.767h4v4h-4v-4zM13.117 14.567h4v4h-4v-4z"
        />
        <path
          clip-rule="evenodd"
          d="M7.702 5a.75.75 0 01.75-.75h3a.75.75 0 110 1.5h-3a.75.75 0 01-.75-.75zM4.87 7.72a.75.75 0 00-.828.662l.746.083-.746-.083v.006L4.04 8.4l-.004.04a12.537 12.537 0 00-.04.671c-.015.44-.015 1.053.044 1.74.118 1.348.474 3.116 1.521 4.425 1.077 1.346 2.656 1.846 3.872 2.029a9.468 9.468 0 002.05.078l.136-.013.039-.004.012-.001h.005s.001-.001-.092-.745l.093.744a.75.75 0 00-.185-1.489M5.533 8.547v.007l-.003.028a11.019 11.019 0 00-.035.581c-.014.395-.014.944.04 1.559.11 1.258.432 2.66 1.197 3.617.736.92 1.875 1.325 2.924 1.482a7.968 7.968 0 001.81.057l.022-.002h.003M4.87 7.72a.75.75 0 01.662.827L4.87 7.72z"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M4.43 7.806a.75.75 0 00-.301 1.017l.659-.358-.66.358.001.001.001.001.002.003.004.008.011.02.04.067c.033.054.08.129.143.219a6.467 6.467 0 002.9 2.286c1.06.418 2.177.537 3.005.558a11.195 11.195 0 001.328-.046 5.62 5.62 0 00.084-.009l.025-.003h.007l.003-.001-.099-.744.1.744a.75.75 0 00-.198-1.487h-.001l-.015.002a9.684 9.684 0 01-1.196.045c-.737-.019-1.659-.126-2.492-.455a4.967 4.967 0 01-2.219-1.746 3.02 3.02 0 01-.115-.178l-.002-.005a.75.75 0 00-1.016-.297z"
          fill-rule="evenodd"
        />
      </svg>
      <svg
        class="icon-inline d-none d-lg-inline-block"
        fill="currentColor"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M4.5 5.5a1 1 0 100-2 1 1 0 000 2zm0 1.5a2.5 2.5 0 100-5 2.5 2.5 0 000 5z"
          fill-rule="evenodd"
        />
        <path
          d="M13.117 2.967h4v4h-4v-4zM13.117 8.767h4v4h-4v-4zM13.117 14.567h4v4h-4v-4z"
        />
        <path
          clip-rule="evenodd"
          d="M7.702 5a.75.75 0 01.75-.75h3a.75.75 0 110 1.5h-3a.75.75 0 01-.75-.75zM4.87 7.72a.75.75 0 00-.828.662l.746.083-.746-.083v.006L4.04 8.4l-.004.04a12.537 12.537 0 00-.04.671c-.015.44-.015 1.053.044 1.74.118 1.348.474 3.116 1.521 4.425 1.077 1.346 2.656 1.846 3.872 2.029a9.468 9.468 0 002.05.078l.136-.013.039-.004.012-.001h.005s.001-.001-.092-.745l.093.744a.75.75 0 00-.185-1.489M5.533 8.547v.007l-.003.028a11.019 11.019 0 00-.035.581c-.014.395-.014.944.04 1.559.11 1.258.432 2.66 1.197 3.617.736.92 1.875 1.325 2.924 1.482a7.968 7.968 0 001.81.057l.022-.002h.003M4.87 7.72a.75.75 0 01.662.827L4.87 7.72z"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M4.43 7.806a.75.75 0 00-.301 1.017l.659-.358-.66.358.001.001.001.001.002.003.004.008.011.02.04.067c.033.054.08.129.143.219a6.467 6.467 0 002.9 2.286c1.06.418 2.177.537 3.005.558a11.195 11.195 0 001.328-.046 5.62 5.62 0 00.084-.009l.025-.003h.007l.003-.001-.099-.744.1.744a.75.75 0 00-.198-1.487h-.001l-.015.002a9.684 9.684 0 01-1.196.045c-.737-.019-1.659-.126-2.492-.455a4.967 4.967 0 01-2.219-1.746 3.02 3.02 0 01-.115-.178l-.002-.005a.75.75 0 00-1.016-.297z"
          fill-rule="evenodd"
        />
      </svg>
      <span
        class="d-none d-lg-inline-block ml-1"
      >
        Campaigns
      </span>
    </a>
  </li>
  <li
    class="nav-item"
  >
    <div
      class="nav-link py-0 px-0 percy-hide chromatic-ignore btn-group"
    >
      <a
        aria-expanded="false"
        aria-haspopup="true"
        class="btn btn-link nav-link"
        href="#"
      >
        <svg
          class="mdi-icon icon-inline"
          data-tooltip="Repositories up to date"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M10,17L6.5,13.5L7.91,12.08L10,14.17L15.18,9L16.59,10.41M19.35,10.03C18.67,6.59 15.64,4 12,4C9.11,4 6.6,5.64 5.35,8.03C2.34,8.36 0,10.9 0,14A6,6 0 0,0 6,20H19A5,5 0 0,0 24,15C24,12.36 21.95,10.22 19.35,10.03Z"
          />
        </svg>
      </a>
      <div
        aria-hidden="true"
        class="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
        role="menu"
        tabindex="-1"
      >
        <h3>
          Code host status
        </h3>
        <div
          class="status-messages-nav-item__dropdown-menu-content"
        >
          <div
            class="status-messages-nav-item__entry mb-3 status-messages-nav-item__entry--border-success"
          >
            <h4>
              <svg
                class="mdi-icon icon-inline mr-1"
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M10,17L6.5,13.5L7.91,12.08L10,14.17L15.18,9L16.59,10.41M19.35,10.03C18.67,6.59 15.64,4 12,4C9.11,4 6.6,5.64 5.35,8.03C2.34,8.36 0,10.9 0,14A6,6 0 0,0 6,20H19A5,5 0 0,0 24,15C24,12.36 21.95,10.22 19.35,10.03Z"
                />
              </svg>
              Repositories up to date
            </h4>
            <p>
              All repositories hosted on the configured code hosts are synced.
            </p>
            <p
              class="status-messages-nav-item__entry-link"
            >
              <a
                href="/site-admin/external-services"
              >
                Manage repositories
              </a>
            </p>
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    class="nav-item"
  >
    <span
      class="command-list__popover-button btn btn-link "
      id="command-list-popover-button-7"
      role="button"
    >
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M20,19V7H4V19H20M20,3A2,2 0 0,1 22,5V19A2,2 0 0,1 20,21H4A2,2 0 0,1 2,19V5C2,3.89 2.9,3 4,3H20M13,17V15H18V17H13M9.58,13L5.57,9H8.4L11.7,12.3C12.09,12.69 12.09,13.33 11.7,13.72L8.42,17H5.59L9.58,13Z"
        />
      </svg>
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M7,10L12,15L17,10H7Z"
        />
      </svg>
    </span>
  </li>
  <li
    class="nav-item"
  >
    <div
      class="py-0 btn-group"
    >
      <a
        aria-expanded="false"
        aria-haspopup="true"
        class="bg-transparent d-flex align-items-center test-user-nav-item-toggle dropdown-toggle nav-link"
        href="#"
      >
        <div
          class="position-relative"
        >
          <div
            class=""
          />
          <svg
            class="mdi-icon user-avatar icon-inline"
            fill="currentColor"
            height="24"
            id="target-user-avatar"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M12,19.2C9.5,19.2 7.29,17.92 6,16C6.03,14 10,12.9 12,12.9C14,12.9 17.97,14 18,16C16.71,17.92 14.5,19.2 12,19.2M12,5A3,3 0 0,1 15,8A3,3 0 0,1 12,11A3,3 0 0,1 9,8A3,3 0 0,1 12,5M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2Z"
            />
          </svg>
        </div>
      </a>
      <div
        aria-hidden="true"
        class="user-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
        role="menu"
        tabindex="-1"
      >
        <h6
          class="py-1 dropdown-header"
          tabindex="-1"
        >
          Signed in as 
          <strong>
            @alice
          </strong>
        </h6>
        <div
          class="dropdown-divider"
          tabindex="-1"
        />
        <a
          class="dropdown-item"
          href="/"
        >
          Settings
        </a>
        <a
          class="dropdown-item"
          href="/extensions"
        >
          Extensions
        </a>
        <a
          class="dropdown-item"
          href="/users/alice/searches"
        >
          Saved searches
        </a>
        <div
          class="dropdown-divider"
          tabindex="-1"
        />
        <div
          class="px-2 py-1"
        >
          <div
            class="d-flex align-items-center"
          >
            <div
              class="mr-2"
            >
              Theme
            </div>
            <select
              class="custom-select custom-select-sm test-theme-toggle"
            >
              <option
                selected=""
                value="light"
              >
                Light
              </option>
              <option
                value="dark"
              >
                Dark
              </option>
              <option
                value="system"
              >
                System
              </option>
            </select>
          </div>
        </div>
        <div
          class="dropdown-divider"
          tabindex="-1"
        />
        <h6
          class="dropdown-header"
          tabindex="-1"
        >
          Organizations
        </h6>
        <a
          class="dropdown-item"
          href="/organizations/acme/settings"
        >
          Acme Corp
        </a>
        <a
          class="dropdown-item"
          href="/organizations/beta/settings"
        >
          Beta Inc
        </a>
        <div
          class="dropdown-divider"
          tabindex="-1"
        />
        <a
          class="dropdown-item"
          href="/site-admin"
        >
          Site admin
        </a>
        <a
          class="dropdown-item"
          href="/help"
          rel="noopener"
          target="_blank"
        >
          Help 
          <svg
            class="mdi-icon icon-inline"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
            />
          </svg>
        </a>
        <a
          class="dropdown-item"
          href="/-/sign-out"
        >
          Sign out
        </a>
        <div
          class="dropdown-divider"
          tabindex="-1"
        />
        <a
          class="dropdown-item"
          href="https://about.sourcegraph.com"
          rel="noopener"
          target="_blank"
        >
          About Sourcegraph 
          <svg
            class="mdi-icon icon-inline"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
            />
          </svg>
        </a>
        <a
          class="dropdown-item"
          href="https://docs.sourcegraph.com/integration/browser_extension"
          rel="noopener"
          target="_blank"
        >
          Browser extension 
          <svg
            class="mdi-icon icon-inline"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
            />
          </svg>
        </a>
      </div>
    </div>
  </li>
</ul>
`;

exports[`NavLinks authed Sourcegraph.com /search 1`] = `
<ul
  class="nav-links nav align-items-center pl-2 pr-1"
>
  <li
    class="nav-item"
  >
    <a
      class="nav-link btn btn-link px-1 text-decoration-none d-flex align-items-center"
      href="/extensions"
    >
      <svg
        class="mdi-icon icon-inline d-lg-none"
        data-tooltip="Extensions"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M22,13.5C22,15.26 20.7,16.72 19,16.96V20A2,2 0 0,1 17,22H13.2V21.7A2.7,2.7 0 0,0 10.5,19C9,19 7.8,20.21 7.8,21.7V22H4A2,2 0 0,1 2,20V16.2H2.3C3.79,16.2 5,15 5,13.5C5,12 3.79,10.8 2.3,10.8H2V7A2,2 0 0,1 4,5H7.04C7.28,3.3 8.74,2 10.5,2C12.26,2 13.72,3.3 13.96,5H17A2,2 0 0,1 19,7V10.04C20.7,10.28 22,11.74 22,13.5M17,15H18.5A1.5,1.5 0 0,0 20,13.5A1.5,1.5 0 0,0 18.5,12H17V7H12V5.5A1.5,1.5 0 0,0 10.5,4A1.5,1.5 0 0,0 9,5.5V7H4V9.12C5.76,9.8 7,11.5 7,13.5C7,15.5 5.75,17.2 4,17.88V20H6.12C6.8,18.25 8.5,17 10.5,17C12.5,17 14.2,18.25 14.88,20H17V15Z"
        />
      </svg>
      <svg
        class="mdi-icon icon-inline d-none d-lg-inline-block"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M22,13.5C22,15.26 20.7,16.72 19,16.96V20A2,2 0 0,1 17,22H13.2V21.7A2.7,2.7 0 0,0 10.5,19C9,19 7.8,20.21 7.8,21.7V22H4A2,2 0 0,1 2,20V16.2H2.3C3.79,16.2 5,15 5,13.5C5,12 3.79,10.8 2.3,10.8H2V7A2,2 0 0,1 4,5H7.04C7.28,3.3 8.74,2 10.5,2C12.26,2 13.72,3.3 13.96,5H17A2,2 0 0,1 19,7V10.04C20.7,10.28 22,11.74 22,13.5M17,15H18.5A1.5,1.5 0 0,0 20,13.5A1.5,1.5 0 0,0 18.5,12H17V7H12V5.5A1.5,1.5 0 0,0 10.5,4A1.5,1.5 0 0,0 9,5.5V7H4V9.12C5.76,9.8 7,11.5 7,13.5C7,15.5 5.75,17.2 4,17.88V20H6.12C6.8,18.25 8.5,17 10.5,17C12.5,17 14.2,18.25 14.88,20H17V15Z"
        />
      </svg>
      <span
        class="d-none d-lg-inline-block ml-1"
      >
        Extensions
      </span>
    </a>
  </li>
  <li
    class="nav-item"
  >
    <a
      class="nav-link btn btn-link px-1 text-decoration-none d-flex align-items-center"
      href="/campaigns"
    >
      <svg
        class="icon-inline d-lg-none"
        fill="currentColor"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M4.5 5.5a1 1 0 100-2 1 1 0 000 2zm0 1.5a2.5 2.5 0 100-5 2.5 2.5 0 000 5z"
          fill-rule="evenodd"
        />
        <path
          d="M13.117 2.967h4v4h-4v-4zM13.117 8.767h4v4h-4v-4zM13.117 14.567h4v4h-4v-4z"
        />
        <path
          clip-rule="evenodd"
          d="M7.702 5a.75.75 0 01.75-.75h3a.75.75 0 110 1.5h-3a.75.75 0 01-.75-.75zM4.87 7.72a.75.75 0 00-.828.662l.746.083-.746-.083v.006L4.04 8.4l-.004.04a12.537 12.537 0 00-.04.671c-.015.44-.015 1.053.044 1.74.118 1.348.474 3.116 1.521 4.425 1.077 1.346 2.656 1.846 3.872 2.029a9.468 9.468 0 002.05.078l.136-.013.039-.004.012-.001h.005s.001-.001-.092-.745l.093.744a.75.75 0 00-.185-1.489M5.533 8.547v.007l-.003.028a11.019 11.019 0 00-.035.581c-.014.395-.014.944.04 1.559.11 1.258.432 2.66 1.197 3.617.736.92 1.875 1.325 2.924 1.482a7.968 7.968 0 001.81.057l.022-.002h.003M4.87 7.72a.75.75 0 01.662.827L4.87 7.72z"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M4.43 7.806a.75.75 0 00-.301 1.017l.659-.358-.66.358.001.001.001.001.002.003.004.008.011.02.04.067c.033.054.08.129.143.219a6.467 6.467 0 002.9 2.286c1.06.418 2.177.537 3.005.558a11.195 11.195 0 001.328-.046 5.62 5.62 0 00.084-.009l.025-.003h.007l.003-.001-.099-.744.1.744a.75.75 0 00-.198-1.487h-.001l-.015.002a9.684 9.684 0 01-1.196.045c-.737-.019-1.659-.126-2.492-.455a4.967 4.967 0 01-2.219-1.746 3.02 3.02 0 01-.115-.178l-.002-.005a.75.75 0 00-1.016-.297z"
          fill-rule="evenodd"
        />
      </svg>
      <svg
        class="icon-inline d-none d-lg-inline-block"
        fill="currentColor"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M4.5 5.5a1 1 0 100-2 1 1 0 000 2zm0 1.5a2.5 2.5 0 100-5 2.5 2.5 0 000 5z"
          fill-rule="evenodd"
        />
        <path
          d="M13.117 2.967h4v4h-4v-4zM13.117 8.767h4v4h-4v-4zM13.117 14.567h4v4h-4v-4z"
        />
        <path
          clip-rule="evenodd"
          d="M7.702 5a.75.75 0 01.75-.75h3a.75.75 0 110 1.5h-3a.75.75 0 01-.75-.75zM4.87 7.72a.75.75 0 00-.828.662l.746.083-.746-.083v.006L4.04 8.4l-.004.04a12.537 12.537 0 00-.04.671c-.015.44-.015 1.053.044 1.74.118 1.348.474 3.116 1.521 4.425 1.077 1.346 2.656 1.846 3.872 2.029a9.468 9.468 0 002.05.078l.136-.013.039-.004.012-.001h.005s.001-.001-.092-.745l.093.744a.75.75 0 00-.185-1.489M5.533 8.547v.007l-.003.028a11.019 11.019 0 00-.035.581c-.014.395-.014.944.04 1.559.11 1.258.432 2.66 1.197 3.617.736.92 1.875 1.325 2.924 1.482a7.968 7.968 0 001.81.057l.022-.002h.003M4.87 7.72a.75.75 0 01.662.827L4.87 7.72z"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M4.43 7.806a.75.75 0 00-.301 1.017l.659-.358-.66.358.001.001.001.001.002.003.004.008.011.02.04.067c.033.054.08.129.143.219a6.467 6.467 0 002.9 2.286c1.06.418 2.177.537 3.005.558a11.195 11.195 0 001.328-.046 5.62 5.62 0 00.084-.009l.025-.003h.007l.003-.001-.099-.744.1.744a.75.75 0 00-.198-1.487h-.001l-.015.002a9.684 9.684 0 01-1.196.045c-.737-.019-1.659-.126-2.492-.455a4.967 4.967 0 01-2.219-1.746 3.02 3.02 0 01-.115-.178l-.002-.005a.75.75 0 00-1.016-.297z"
          fill-rule="evenodd"
        />
      </svg>
      <span
        class="d-none d-lg-inline-block ml-1"
      >
        Campaigns
      </span>
    </a>
  </li>
  <li
    class="nav-item"
  >
    <div
      class="nav-link py-0 px-0 percy-hide chromatic-ignore btn-group"
    >
      <a
        aria-expanded="false"
        aria-haspopup="true"
        class="btn btn-link nav-link"
        href="#"
      >
        <svg
          class="mdi-icon icon-inline"
          data-tooltip="Repositories up to date"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M10,17L6.5,13.5L7.91,12.08L10,14.17L15.18,9L16.59,10.41M19.35,10.03C18.67,6.59 15.64,4 12,4C9.11,4 6.6,5.64 5.35,8.03C2.34,8.36 0,10.9 0,14A6,6 0 0,0 6,20H19A5,5 0 0,0 24,15C24,12.36 21.95,10.22 19.35,10.03Z"
          />
        </svg>
      </a>
      <div
        aria-hidden="true"
        class="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
        role="menu"
        tabindex="-1"
      >
        <h3>
          Code host status
        </h3>
        <div
          class="status-messages-nav-item__dropdown-menu-content"
        >
          <div
            class="status-messages-nav-item__entry mb-3 status-messages-nav-item__entry--border-success"
          >
            <h4>
              <svg
                class="mdi-icon icon-inline mr-1"
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M10,17L6.5,13.5L7.91,12.08L10,14.17L15.18,9L16.59,10.41M19.35,10.03C18.67,6.59 15.64,4 12,4C9.11,4 6.6,5.64 5.35,8.03C2.34,8.36 0,10.9 0,14A6,6 0 0,0 6,20H19A5,5 0 0,0 24,15C24,12.36 21.95,10.22 19.35,10.03Z"
                />
              </svg>
              Repositories up to date
            </h4>
            <p>
              All repositories hosted on the configured code hosts are synced.
            </p>
            <p
              class="status-messages-nav-item__entry-link"
            >
              <a
                href="/site-admin/external-services"
              >
                Manage repositories
              </a>
            </p>
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    class="nav-item"
  >
    <span
      class="command-list__popover-button btn btn-link "
      id="command-list-popover-button-8"
      role="button"
    >
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M20,19V7H4V19H20M20,3A2,2 0 0,1 22,5V19A2,2 0 0,1 20,21H4A2,2 0 0,1 2,19V5C2,3.89 2.9,3 4,3H20M13,17V15H18V17H13M9.58,13L5.57,9H8.4L11.7,12.3C12.09,12.69 12.09,13.33 11.7,13.72L8.42,17H5.59L9.58,13Z"
        />
      </svg>
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M7,10L12,15L17,10H7Z"
        />
      </svg>
    </span>
  </li>
  <li
    class="nav-item"
  >
    <div
      class="py-0 btn-group"
    >
      <a
        aria-expanded="false"
        aria-haspopup="true"
        class="bg-transparent d-flex align-items-center test-user-nav-item-toggle dropdown-toggle nav-link"
        href="#"
      >
        <div
          class="position-relative"
        >
          <div
            class=""
          />
          <svg
            class="mdi-icon user-avatar icon-inline"
            fill="currentColor"
            height="24"
            id="target-user-avatar"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M12,19.2C9.5,19.2 7.29,17.92 6,16C6.03,14 10,12.9 12,12.9C14,12.9 17.97,14 18,16C16.71,17.92 14.5,19.2 12,19.2M12,5A3,3 0 0,1 15,8A3,3 0 0,1 12,11A3,3 0 0,1 9,8A3,3 0 0,1 12,5M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2Z"
            />
          </svg>
        </div>
      </a>
      <div
        aria-hidden="true"
        class="user-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
        role="menu"
        tabindex="-1"
      >
        <h6
          class="py-1 dropdown-header"
          tabindex="-1"
        >
          Signed in as 
          <strong>
            @alice
          </strong>
        </h6>
        <div
          class="dropdown-divider"
          tabindex="-1"
        />
        <a
          class="dropdown-item"
          href="/"
        >
          Settings
        </a>
        <a
          class="dropdown-item"
          href="/extensions"
        >
          Extensions
        </a>
        <a
          class="dropdown-item"
          href="/users/alice/searches"
        >
          Saved searches
        </a>
        <div
          class="dropdown-divider"
          tabindex="-1"
        />
        <div
          class="px-2 py-1"
        >
          <div
            class="d-flex align-items-center"
          >
            <div
              class="mr-2"
            >
              Theme
            </div>
            <select
              class="custom-select custom-select-sm test-theme-toggle"
            >
              <option
                selected=""
                value="light"
              >
                Light
              </option>
              <option
                value="dark"
              >
                Dark
              </option>
              <option
                value="system"
              >
                System
              </option>
            </select>
          </div>
        </div>
        <div
          class="dropdown-divider"
          tabindex="-1"
        />
        <h6
          class="dropdown-header"
          tabindex="-1"
        >
          Organizations
        </h6>
        <a
          class="dropdown-item"
          href="/organizations/acme/settings"
        >
          Acme Corp
        </a>
        <a
          class="dropdown-item"
          href="/organizations/beta/settings"
        >
          Beta Inc
        </a>
        <div
          class="dropdown-divider"
          tabindex="-1"
        />
        <a
          class="dropdown-item"
          href="/site-admin"
        >
          Site admin
        </a>
        <a
          class="dropdown-item"
          href="/help"
          rel="noopener"
          target="_blank"
        >
          Help 
          <svg
            class="mdi-icon icon-inline"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
            />
          </svg>
        </a>
        <a
          class="dropdown-item"
          href="/-/sign-out"
        >
          Sign out
        </a>
        <div
          class="dropdown-divider"
          tabindex="-1"
        />
        <a
          class="dropdown-item"
          href="https://about.sourcegraph.com"
          rel="noopener"
          target="_blank"
        >
          About Sourcegraph 
          <svg
            class="mdi-icon icon-inline"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
            />
          </svg>
        </a>
        <a
          class="dropdown-item"
          href="https://docs.sourcegraph.com/integration/browser_extension"
          rel="noopener"
          target="_blank"
        >
          Browser extension 
          <svg
            class="mdi-icon icon-inline"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
            />
          </svg>
        </a>
      </div>
    </div>
  </li>
</ul>
`;

exports[`NavLinks authed self-hosted /foo 1`] = `
<ul
  class="nav-links nav align-items-center pl-2 pr-1"
>
  <li
    class="nav-item d-sm-none"
  >
    <a
      class="nav-link"
      href="/search"
    >
      Search
    </a>
  </li>
  <li
    class="nav-item"
  >
    <a
      class="nav-link btn btn-link px-1 text-decoration-none d-flex align-items-center"
      href="/extensions"
    >
      <svg
        class="mdi-icon icon-inline d-lg-none"
        data-tooltip="Extensions"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M22,13.5C22,15.26 20.7,16.72 19,16.96V20A2,2 0 0,1 17,22H13.2V21.7A2.7,2.7 0 0,0 10.5,19C9,19 7.8,20.21 7.8,21.7V22H4A2,2 0 0,1 2,20V16.2H2.3C3.79,16.2 5,15 5,13.5C5,12 3.79,10.8 2.3,10.8H2V7A2,2 0 0,1 4,5H7.04C7.28,3.3 8.74,2 10.5,2C12.26,2 13.72,3.3 13.96,5H17A2,2 0 0,1 19,7V10.04C20.7,10.28 22,11.74 22,13.5M17,15H18.5A1.5,1.5 0 0,0 20,13.5A1.5,1.5 0 0,0 18.5,12H17V7H12V5.5A1.5,1.5 0 0,0 10.5,4A1.5,1.5 0 0,0 9,5.5V7H4V9.12C5.76,9.8 7,11.5 7,13.5C7,15.5 5.75,17.2 4,17.88V20H6.12C6.8,18.25 8.5,17 10.5,17C12.5,17 14.2,18.25 14.88,20H17V15Z"
        />
      </svg>
      <svg
        class="mdi-icon icon-inline d-none d-lg-inline-block"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M22,13.5C22,15.26 20.7,16.72 19,16.96V20A2,2 0 0,1 17,22H13.2V21.7A2.7,2.7 0 0,0 10.5,19C9,19 7.8,20.21 7.8,21.7V22H4A2,2 0 0,1 2,20V16.2H2.3C3.79,16.2 5,15 5,13.5C5,12 3.79,10.8 2.3,10.8H2V7A2,2 0 0,1 4,5H7.04C7.28,3.3 8.74,2 10.5,2C12.26,2 13.72,3.3 13.96,5H17A2,2 0 0,1 19,7V10.04C20.7,10.28 22,11.74 22,13.5M17,15H18.5A1.5,1.5 0 0,0 20,13.5A1.5,1.5 0 0,0 18.5,12H17V7H12V5.5A1.5,1.5 0 0,0 10.5,4A1.5,1.5 0 0,0 9,5.5V7H4V9.12C5.76,9.8 7,11.5 7,13.5C7,15.5 5.75,17.2 4,17.88V20H6.12C6.8,18.25 8.5,17 10.5,17C12.5,17 14.2,18.25 14.88,20H17V15Z"
        />
      </svg>
      <span
        class="d-none d-lg-inline-block ml-1"
      >
        Extensions
      </span>
    </a>
  </li>
  <li
    class="nav-item"
  >
    <a
      class="nav-link btn btn-link px-1 text-decoration-none d-flex align-items-center"
      href="/campaigns"
    >
      <svg
        class="icon-inline d-lg-none"
        fill="currentColor"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M4.5 5.5a1 1 0 100-2 1 1 0 000 2zm0 1.5a2.5 2.5 0 100-5 2.5 2.5 0 000 5z"
          fill-rule="evenodd"
        />
        <path
          d="M13.117 2.967h4v4h-4v-4zM13.117 8.767h4v4h-4v-4zM13.117 14.567h4v4h-4v-4z"
        />
        <path
          clip-rule="evenodd"
          d="M7.702 5a.75.75 0 01.75-.75h3a.75.75 0 110 1.5h-3a.75.75 0 01-.75-.75zM4.87 7.72a.75.75 0 00-.828.662l.746.083-.746-.083v.006L4.04 8.4l-.004.04a12.537 12.537 0 00-.04.671c-.015.44-.015 1.053.044 1.74.118 1.348.474 3.116 1.521 4.425 1.077 1.346 2.656 1.846 3.872 2.029a9.468 9.468 0 002.05.078l.136-.013.039-.004.012-.001h.005s.001-.001-.092-.745l.093.744a.75.75 0 00-.185-1.489M5.533 8.547v.007l-.003.028a11.019 11.019 0 00-.035.581c-.014.395-.014.944.04 1.559.11 1.258.432 2.66 1.197 3.617.736.92 1.875 1.325 2.924 1.482a7.968 7.968 0 001.81.057l.022-.002h.003M4.87 7.72a.75.75 0 01.662.827L4.87 7.72z"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M4.43 7.806a.75.75 0 00-.301 1.017l.659-.358-.66.358.001.001.001.001.002.003.004.008.011.02.04.067c.033.054.08.129.143.219a6.467 6.467 0 002.9 2.286c1.06.418 2.177.537 3.005.558a11.195 11.195 0 001.328-.046 5.62 5.62 0 00.084-.009l.025-.003h.007l.003-.001-.099-.744.1.744a.75.75 0 00-.198-1.487h-.001l-.015.002a9.684 9.684 0 01-1.196.045c-.737-.019-1.659-.126-2.492-.455a4.967 4.967 0 01-2.219-1.746 3.02 3.02 0 01-.115-.178l-.002-.005a.75.75 0 00-1.016-.297z"
          fill-rule="evenodd"
        />
      </svg>
      <svg
        class="icon-inline d-none d-lg-inline-block"
        fill="currentColor"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M4.5 5.5a1 1 0 100-2 1 1 0 000 2zm0 1.5a2.5 2.5 0 100-5 2.5 2.5 0 000 5z"
          fill-rule="evenodd"
        />
        <path
          d="M13.117 2.967h4v4h-4v-4zM13.117 8.767h4v4h-4v-4zM13.117 14.567h4v4h-4v-4z"
        />
        <path
          clip-rule="evenodd"
          d="M7.702 5a.75.75 0 01.75-.75h3a.75.75 0 110 1.5h-3a.75.75 0 01-.75-.75zM4.87 7.72a.75.75 0 00-.828.662l.746.083-.746-.083v.006L4.04 8.4l-.004.04a12.537 12.537 0 00-.04.671c-.015.44-.015 1.053.044 1.74.118 1.348.474 3.116 1.521 4.425 1.077 1.346 2.656 1.846 3.872 2.029a9.468 9.468 0 002.05.078l.136-.013.039-.004.012-.001h.005s.001-.001-.092-.745l.093.744a.75.75 0 00-.185-1.489M5.533 8.547v.007l-.003.028a11.019 11.019 0 00-.035.581c-.014.395-.014.944.04 1.559.11 1.258.432 2.66 1.197 3.617.736.92 1.875 1.325 2.924 1.482a7.968 7.968 0 001.81.057l.022-.002h.003M4.87 7.72a.75.75 0 01.662.827L4.87 7.72z"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M4.43 7.806a.75.75 0 00-.301 1.017l.659-.358-.66.358.001.001.001.001.002.003.004.008.011.02.04.067c.033.054.08.129.143.219a6.467 6.467 0 002.9 2.286c1.06.418 2.177.537 3.005.558a11.195 11.195 0 001.328-.046 5.62 5.62 0 00.084-.009l.025-.003h.007l.003-.001-.099-.744.1.744a.75.75 0 00-.198-1.487h-.001l-.015.002a9.684 9.684 0 01-1.196.045c-.737-.019-1.659-.126-2.492-.455a4.967 4.967 0 01-2.219-1.746 3.02 3.02 0 01-.115-.178l-.002-.005a.75.75 0 00-1.016-.297z"
          fill-rule="evenodd"
        />
      </svg>
      <span
        class="d-none d-lg-inline-block ml-1"
      >
        Campaigns
      </span>
    </a>
  </li>
  <li
    class="nav-item"
  >
    <div
      class="nav-link py-0 px-0 percy-hide chromatic-ignore btn-group"
    >
      <a
        aria-expanded="false"
        aria-haspopup="true"
        class="btn btn-link nav-link"
        href="#"
      >
        <svg
          class="mdi-icon icon-inline"
          data-tooltip="Repositories up to date"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M10,17L6.5,13.5L7.91,12.08L10,14.17L15.18,9L16.59,10.41M19.35,10.03C18.67,6.59 15.64,4 12,4C9.11,4 6.6,5.64 5.35,8.03C2.34,8.36 0,10.9 0,14A6,6 0 0,0 6,20H19A5,5 0 0,0 24,15C24,12.36 21.95,10.22 19.35,10.03Z"
          />
        </svg>
      </a>
      <div
        aria-hidden="true"
        class="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
        role="menu"
        tabindex="-1"
      >
        <h3>
          Code host status
        </h3>
        <div
          class="status-messages-nav-item__dropdown-menu-content"
        >
          <div
            class="status-messages-nav-item__entry mb-3 status-messages-nav-item__entry--border-success"
          >
            <h4>
              <svg
                class="mdi-icon icon-inline mr-1"
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M10,17L6.5,13.5L7.91,12.08L10,14.17L15.18,9L16.59,10.41M19.35,10.03C18.67,6.59 15.64,4 12,4C9.11,4 6.6,5.64 5.35,8.03C2.34,8.36 0,10.9 0,14A6,6 0 0,0 6,20H19A5,5 0 0,0 24,15C24,12.36 21.95,10.22 19.35,10.03Z"
                />
              </svg>
              Repositories up to date
            </h4>
            <p>
              All repositories hosted on the configured code hosts are synced.
            </p>
            <p
              class="status-messages-nav-item__entry-link"
            >
              <a
                href="/site-admin/external-services"
              >
                Manage repositories
              </a>
            </p>
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    class="nav-item"
  >
    <span
      class="command-list__popover-button btn btn-link "
      id="command-list-popover-button-5"
      role="button"
    >
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M20,19V7H4V19H20M20,3A2,2 0 0,1 22,5V19A2,2 0 0,1 20,21H4A2,2 0 0,1 2,19V5C2,3.89 2.9,3 4,3H20M13,17V15H18V17H13M9.58,13L5.57,9H8.4L11.7,12.3C12.09,12.69 12.09,13.33 11.7,13.72L8.42,17H5.59L9.58,13Z"
        />
      </svg>
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M7,10L12,15L17,10H7Z"
        />
      </svg>
    </span>
  </li>
  <li
    class="nav-item"
  >
    <div
      class="py-0 btn-group"
    >
      <a
        aria-expanded="false"
        aria-haspopup="true"
        class="bg-transparent d-flex align-items-center test-user-nav-item-toggle dropdown-toggle nav-link"
        href="#"
      >
        <div
          class="position-relative"
        >
          <div
            class=""
          />
          <svg
            class="mdi-icon user-avatar icon-inline"
            fill="currentColor"
            height="24"
            id="target-user-avatar"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M12,19.2C9.5,19.2 7.29,17.92 6,16C6.03,14 10,12.9 12,12.9C14,12.9 17.97,14 18,16C16.71,17.92 14.5,19.2 12,19.2M12,5A3,3 0 0,1 15,8A3,3 0 0,1 12,11A3,3 0 0,1 9,8A3,3 0 0,1 12,5M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2Z"
            />
          </svg>
        </div>
      </a>
      <div
        aria-hidden="true"
        class="user-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
        role="menu"
        tabindex="-1"
      >
        <h6
          class="py-1 dropdown-header"
          tabindex="-1"
        >
          Signed in as 
          <strong>
            @alice
          </strong>
        </h6>
        <div
          class="dropdown-divider"
          tabindex="-1"
        />
        <a
          class="dropdown-item"
          href="/"
        >
          Settings
        </a>
        <a
          class="dropdown-item"
          href="/extensions"
        >
          Extensions
        </a>
        <a
          class="dropdown-item"
          href="/users/alice/searches"
        >
          Saved searches
        </a>
        <div
          class="dropdown-divider"
          tabindex="-1"
        />
        <div
          class="px-2 py-1"
        >
          <div
            class="d-flex align-items-center"
          >
            <div
              class="mr-2"
            >
              Theme
            </div>
            <select
              class="custom-select custom-select-sm test-theme-toggle"
            >
              <option
                selected=""
                value="light"
              >
                Light
              </option>
              <option
                value="dark"
              >
                Dark
              </option>
              <option
                value="system"
              >
                System
              </option>
            </select>
          </div>
        </div>
        <div
          class="dropdown-divider"
          tabindex="-1"
        />
        <h6
          class="dropdown-header"
          tabindex="-1"
        >
          Organizations
        </h6>
        <a
          class="dropdown-item"
          href="/organizations/acme/settings"
        >
          Acme Corp
        </a>
        <a
          class="dropdown-item"
          href="/organizations/beta/settings"
        >
          Beta Inc
        </a>
        <div
          class="dropdown-divider"
          tabindex="-1"
        />
        <a
          class="dropdown-item"
          href="/site-admin"
        >
          Site admin
        </a>
        <a
          class="dropdown-item"
          href="/help"
          rel="noopener"
          target="_blank"
        >
          Help 
          <svg
            class="mdi-icon icon-inline"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
            />
          </svg>
        </a>
        <a
          class="dropdown-item"
          href="/-/sign-out"
        >
          Sign out
        </a>
        <div
          class="dropdown-divider"
          tabindex="-1"
        />
        <a
          class="dropdown-item"
          href="https://docs.sourcegraph.com/integration/browser_extension"
          rel="noopener"
          target="_blank"
        >
          Browser extension 
          <svg
            class="mdi-icon icon-inline"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
            />
          </svg>
        </a>
      </div>
    </div>
  </li>
</ul>
`;

exports[`NavLinks authed self-hosted /search 1`] = `
<ul
  class="nav-links nav align-items-center pl-2 pr-1"
>
  <li
    class="nav-item"
  >
    <a
      class="nav-link btn btn-link px-1 text-decoration-none d-flex align-items-center"
      href="/extensions"
    >
      <svg
        class="mdi-icon icon-inline d-lg-none"
        data-tooltip="Extensions"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M22,13.5C22,15.26 20.7,16.72 19,16.96V20A2,2 0 0,1 17,22H13.2V21.7A2.7,2.7 0 0,0 10.5,19C9,19 7.8,20.21 7.8,21.7V22H4A2,2 0 0,1 2,20V16.2H2.3C3.79,16.2 5,15 5,13.5C5,12 3.79,10.8 2.3,10.8H2V7A2,2 0 0,1 4,5H7.04C7.28,3.3 8.74,2 10.5,2C12.26,2 13.72,3.3 13.96,5H17A2,2 0 0,1 19,7V10.04C20.7,10.28 22,11.74 22,13.5M17,15H18.5A1.5,1.5 0 0,0 20,13.5A1.5,1.5 0 0,0 18.5,12H17V7H12V5.5A1.5,1.5 0 0,0 10.5,4A1.5,1.5 0 0,0 9,5.5V7H4V9.12C5.76,9.8 7,11.5 7,13.5C7,15.5 5.75,17.2 4,17.88V20H6.12C6.8,18.25 8.5,17 10.5,17C12.5,17 14.2,18.25 14.88,20H17V15Z"
        />
      </svg>
      <svg
        class="mdi-icon icon-inline d-none d-lg-inline-block"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M22,13.5C22,15.26 20.7,16.72 19,16.96V20A2,2 0 0,1 17,22H13.2V21.7A2.7,2.7 0 0,0 10.5,19C9,19 7.8,20.21 7.8,21.7V22H4A2,2 0 0,1 2,20V16.2H2.3C3.79,16.2 5,15 5,13.5C5,12 3.79,10.8 2.3,10.8H2V7A2,2 0 0,1 4,5H7.04C7.28,3.3 8.74,2 10.5,2C12.26,2 13.72,3.3 13.96,5H17A2,2 0 0,1 19,7V10.04C20.7,10.28 22,11.74 22,13.5M17,15H18.5A1.5,1.5 0 0,0 20,13.5A1.5,1.5 0 0,0 18.5,12H17V7H12V5.5A1.5,1.5 0 0,0 10.5,4A1.5,1.5 0 0,0 9,5.5V7H4V9.12C5.76,9.8 7,11.5 7,13.5C7,15.5 5.75,17.2 4,17.88V20H6.12C6.8,18.25 8.5,17 10.5,17C12.5,17 14.2,18.25 14.88,20H17V15Z"
        />
      </svg>
      <span
        class="d-none d-lg-inline-block ml-1"
      >
        Extensions
      </span>
    </a>
  </li>
  <li
    class="nav-item"
  >
    <a
      class="nav-link btn btn-link px-1 text-decoration-none d-flex align-items-center"
      href="/campaigns"
    >
      <svg
        class="icon-inline d-lg-none"
        fill="currentColor"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M4.5 5.5a1 1 0 100-2 1 1 0 000 2zm0 1.5a2.5 2.5 0 100-5 2.5 2.5 0 000 5z"
          fill-rule="evenodd"
        />
        <path
          d="M13.117 2.967h4v4h-4v-4zM13.117 8.767h4v4h-4v-4zM13.117 14.567h4v4h-4v-4z"
        />
        <path
          clip-rule="evenodd"
          d="M7.702 5a.75.75 0 01.75-.75h3a.75.75 0 110 1.5h-3a.75.75 0 01-.75-.75zM4.87 7.72a.75.75 0 00-.828.662l.746.083-.746-.083v.006L4.04 8.4l-.004.04a12.537 12.537 0 00-.04.671c-.015.44-.015 1.053.044 1.74.118 1.348.474 3.116 1.521 4.425 1.077 1.346 2.656 1.846 3.872 2.029a9.468 9.468 0 002.05.078l.136-.013.039-.004.012-.001h.005s.001-.001-.092-.745l.093.744a.75.75 0 00-.185-1.489M5.533 8.547v.007l-.003.028a11.019 11.019 0 00-.035.581c-.014.395-.014.944.04 1.559.11 1.258.432 2.66 1.197 3.617.736.92 1.875 1.325 2.924 1.482a7.968 7.968 0 001.81.057l.022-.002h.003M4.87 7.72a.75.75 0 01.662.827L4.87 7.72z"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M4.43 7.806a.75.75 0 00-.301 1.017l.659-.358-.66.358.001.001.001.001.002.003.004.008.011.02.04.067c.033.054.08.129.143.219a6.467 6.467 0 002.9 2.286c1.06.418 2.177.537 3.005.558a11.195 11.195 0 001.328-.046 5.62 5.62 0 00.084-.009l.025-.003h.007l.003-.001-.099-.744.1.744a.75.75 0 00-.198-1.487h-.001l-.015.002a9.684 9.684 0 01-1.196.045c-.737-.019-1.659-.126-2.492-.455a4.967 4.967 0 01-2.219-1.746 3.02 3.02 0 01-.115-.178l-.002-.005a.75.75 0 00-1.016-.297z"
          fill-rule="evenodd"
        />
      </svg>
      <svg
        class="icon-inline d-none d-lg-inline-block"
        fill="currentColor"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M4.5 5.5a1 1 0 100-2 1 1 0 000 2zm0 1.5a2.5 2.5 0 100-5 2.5 2.5 0 000 5z"
          fill-rule="evenodd"
        />
        <path
          d="M13.117 2.967h4v4h-4v-4zM13.117 8.767h4v4h-4v-4zM13.117 14.567h4v4h-4v-4z"
        />
        <path
          clip-rule="evenodd"
          d="M7.702 5a.75.75 0 01.75-.75h3a.75.75 0 110 1.5h-3a.75.75 0 01-.75-.75zM4.87 7.72a.75.75 0 00-.828.662l.746.083-.746-.083v.006L4.04 8.4l-.004.04a12.537 12.537 0 00-.04.671c-.015.44-.015 1.053.044 1.74.118 1.348.474 3.116 1.521 4.425 1.077 1.346 2.656 1.846 3.872 2.029a9.468 9.468 0 002.05.078l.136-.013.039-.004.012-.001h.005s.001-.001-.092-.745l.093.744a.75.75 0 00-.185-1.489M5.533 8.547v.007l-.003.028a11.019 11.019 0 00-.035.581c-.014.395-.014.944.04 1.559.11 1.258.432 2.66 1.197 3.617.736.92 1.875 1.325 2.924 1.482a7.968 7.968 0 001.81.057l.022-.002h.003M4.87 7.72a.75.75 0 01.662.827L4.87 7.72z"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M4.43 7.806a.75.75 0 00-.301 1.017l.659-.358-.66.358.001.001.001.001.002.003.004.008.011.02.04.067c.033.054.08.129.143.219a6.467 6.467 0 002.9 2.286c1.06.418 2.177.537 3.005.558a11.195 11.195 0 001.328-.046 5.62 5.62 0 00.084-.009l.025-.003h.007l.003-.001-.099-.744.1.744a.75.75 0 00-.198-1.487h-.001l-.015.002a9.684 9.684 0 01-1.196.045c-.737-.019-1.659-.126-2.492-.455a4.967 4.967 0 01-2.219-1.746 3.02 3.02 0 01-.115-.178l-.002-.005a.75.75 0 00-1.016-.297z"
          fill-rule="evenodd"
        />
      </svg>
      <span
        class="d-none d-lg-inline-block ml-1"
      >
        Campaigns
      </span>
    </a>
  </li>
  <li
    class="nav-item"
  >
    <div
      class="nav-link py-0 px-0 percy-hide chromatic-ignore btn-group"
    >
      <a
        aria-expanded="false"
        aria-haspopup="true"
        class="btn btn-link nav-link"
        href="#"
      >
        <svg
          class="mdi-icon icon-inline"
          data-tooltip="Repositories up to date"
          fill="currentColor"
          height="24"
          viewBox="0 0 24 24"
          width="24"
        >
          <path
            d="M10,17L6.5,13.5L7.91,12.08L10,14.17L15.18,9L16.59,10.41M19.35,10.03C18.67,6.59 15.64,4 12,4C9.11,4 6.6,5.64 5.35,8.03C2.34,8.36 0,10.9 0,14A6,6 0 0,0 6,20H19A5,5 0 0,0 24,15C24,12.36 21.95,10.22 19.35,10.03Z"
          />
        </svg>
      </a>
      <div
        aria-hidden="true"
        class="status-messages-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
        role="menu"
        tabindex="-1"
      >
        <h3>
          Code host status
        </h3>
        <div
          class="status-messages-nav-item__dropdown-menu-content"
        >
          <div
            class="status-messages-nav-item__entry mb-3 status-messages-nav-item__entry--border-success"
          >
            <h4>
              <svg
                class="mdi-icon icon-inline mr-1"
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  d="M10,17L6.5,13.5L7.91,12.08L10,14.17L15.18,9L16.59,10.41M19.35,10.03C18.67,6.59 15.64,4 12,4C9.11,4 6.6,5.64 5.35,8.03C2.34,8.36 0,10.9 0,14A6,6 0 0,0 6,20H19A5,5 0 0,0 24,15C24,12.36 21.95,10.22 19.35,10.03Z"
                />
              </svg>
              Repositories up to date
            </h4>
            <p>
              All repositories hosted on the configured code hosts are synced.
            </p>
            <p
              class="status-messages-nav-item__entry-link"
            >
              <a
                href="/site-admin/external-services"
              >
                Manage repositories
              </a>
            </p>
          </div>
        </div>
      </div>
    </div>
  </li>
  <li
    class="nav-item"
  >
    <span
      class="command-list__popover-button btn btn-link "
      id="command-list-popover-button-6"
      role="button"
    >
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M20,19V7H4V19H20M20,3A2,2 0 0,1 22,5V19A2,2 0 0,1 20,21H4A2,2 0 0,1 2,19V5C2,3.89 2.9,3 4,3H20M13,17V15H18V17H13M9.58,13L5.57,9H8.4L11.7,12.3C12.09,12.69 12.09,13.33 11.7,13.72L8.42,17H5.59L9.58,13Z"
        />
      </svg>
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M7,10L12,15L17,10H7Z"
        />
      </svg>
    </span>
  </li>
  <li
    class="nav-item"
  >
    <div
      class="py-0 btn-group"
    >
      <a
        aria-expanded="false"
        aria-haspopup="true"
        class="bg-transparent d-flex align-items-center test-user-nav-item-toggle dropdown-toggle nav-link"
        href="#"
      >
        <div
          class="position-relative"
        >
          <div
            class=""
          />
          <svg
            class="mdi-icon user-avatar icon-inline"
            fill="currentColor"
            height="24"
            id="target-user-avatar"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M12,19.2C9.5,19.2 7.29,17.92 6,16C6.03,14 10,12.9 12,12.9C14,12.9 17.97,14 18,16C16.71,17.92 14.5,19.2 12,19.2M12,5A3,3 0 0,1 15,8A3,3 0 0,1 12,11A3,3 0 0,1 9,8A3,3 0 0,1 12,5M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2Z"
            />
          </svg>
        </div>
      </a>
      <div
        aria-hidden="true"
        class="user-nav-item__dropdown-menu dropdown-menu dropdown-menu-right"
        role="menu"
        tabindex="-1"
      >
        <h6
          class="py-1 dropdown-header"
          tabindex="-1"
        >
          Signed in as 
          <strong>
            @alice
          </strong>
        </h6>
        <div
          class="dropdown-divider"
          tabindex="-1"
        />
        <a
          class="dropdown-item"
          href="/"
        >
          Settings
        </a>
        <a
          class="dropdown-item"
          href="/extensions"
        >
          Extensions
        </a>
        <a
          class="dropdown-item"
          href="/users/alice/searches"
        >
          Saved searches
        </a>
        <div
          class="dropdown-divider"
          tabindex="-1"
        />
        <div
          class="px-2 py-1"
        >
          <div
            class="d-flex align-items-center"
          >
            <div
              class="mr-2"
            >
              Theme
            </div>
            <select
              class="custom-select custom-select-sm test-theme-toggle"
            >
              <option
                selected=""
                value="light"
              >
                Light
              </option>
              <option
                value="dark"
              >
                Dark
              </option>
              <option
                value="system"
              >
                System
              </option>
            </select>
          </div>
        </div>
        <div
          class="dropdown-divider"
          tabindex="-1"
        />
        <h6
          class="dropdown-header"
          tabindex="-1"
        >
          Organizations
        </h6>
        <a
          class="dropdown-item"
          href="/organizations/acme/settings"
        >
          Acme Corp
        </a>
        <a
          class="dropdown-item"
          href="/organizations/beta/settings"
        >
          Beta Inc
        </a>
        <div
          class="dropdown-divider"
          tabindex="-1"
        />
        <a
          class="dropdown-item"
          href="/site-admin"
        >
          Site admin
        </a>
        <a
          class="dropdown-item"
          href="/help"
          rel="noopener"
          target="_blank"
        >
          Help 
          <svg
            class="mdi-icon icon-inline"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
            />
          </svg>
        </a>
        <a
          class="dropdown-item"
          href="/-/sign-out"
        >
          Sign out
        </a>
        <div
          class="dropdown-divider"
          tabindex="-1"
        />
        <a
          class="dropdown-item"
          href="https://docs.sourcegraph.com/integration/browser_extension"
          rel="noopener"
          target="_blank"
        >
          Browser extension 
          <svg
            class="mdi-icon icon-inline"
            fill="currentColor"
            height="24"
            viewBox="0 0 24 24"
            width="24"
          >
            <path
              d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
            />
          </svg>
        </a>
      </div>
    </div>
  </li>
</ul>
`;

exports[`NavLinks unauthed Sourcegraph.com /foo 1`] = `
<ul
  class="nav-links nav align-items-center pl-2 pr-1"
>
  <li
    class="nav-item d-sm-none"
  >
    <a
      class="nav-link"
      href="/search"
    >
      Search
    </a>
  </li>
  <li
    class="nav-item"
  >
    <a
      class="nav-link btn btn-link px-1 text-decoration-none d-flex align-items-center"
      href="/extensions"
    >
      <svg
        class="mdi-icon icon-inline d-lg-none"
        data-tooltip="Extensions"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M22,13.5C22,15.26 20.7,16.72 19,16.96V20A2,2 0 0,1 17,22H13.2V21.7A2.7,2.7 0 0,0 10.5,19C9,19 7.8,20.21 7.8,21.7V22H4A2,2 0 0,1 2,20V16.2H2.3C3.79,16.2 5,15 5,13.5C5,12 3.79,10.8 2.3,10.8H2V7A2,2 0 0,1 4,5H7.04C7.28,3.3 8.74,2 10.5,2C12.26,2 13.72,3.3 13.96,5H17A2,2 0 0,1 19,7V10.04C20.7,10.28 22,11.74 22,13.5M17,15H18.5A1.5,1.5 0 0,0 20,13.5A1.5,1.5 0 0,0 18.5,12H17V7H12V5.5A1.5,1.5 0 0,0 10.5,4A1.5,1.5 0 0,0 9,5.5V7H4V9.12C5.76,9.8 7,11.5 7,13.5C7,15.5 5.75,17.2 4,17.88V20H6.12C6.8,18.25 8.5,17 10.5,17C12.5,17 14.2,18.25 14.88,20H17V15Z"
        />
      </svg>
      <svg
        class="mdi-icon icon-inline d-none d-lg-inline-block"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M22,13.5C22,15.26 20.7,16.72 19,16.96V20A2,2 0 0,1 17,22H13.2V21.7A2.7,2.7 0 0,0 10.5,19C9,19 7.8,20.21 7.8,21.7V22H4A2,2 0 0,1 2,20V16.2H2.3C3.79,16.2 5,15 5,13.5C5,12 3.79,10.8 2.3,10.8H2V7A2,2 0 0,1 4,5H7.04C7.28,3.3 8.74,2 10.5,2C12.26,2 13.72,3.3 13.96,5H17A2,2 0 0,1 19,7V10.04C20.7,10.28 22,11.74 22,13.5M17,15H18.5A1.5,1.5 0 0,0 20,13.5A1.5,1.5 0 0,0 18.5,12H17V7H12V5.5A1.5,1.5 0 0,0 10.5,4A1.5,1.5 0 0,0 9,5.5V7H4V9.12C5.76,9.8 7,11.5 7,13.5C7,15.5 5.75,17.2 4,17.88V20H6.12C6.8,18.25 8.5,17 10.5,17C12.5,17 14.2,18.25 14.88,20H17V15Z"
        />
      </svg>
      <span
        class="d-none d-lg-inline-block ml-1"
      >
        Extensions
      </span>
    </a>
  </li>
  <li
    class="nav-item"
  >
    <a
      class="nav-link btn btn-link px-1 text-decoration-none d-flex align-items-center"
      href="/campaigns"
    >
      <svg
        class="icon-inline d-lg-none"
        fill="currentColor"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M4.5 5.5a1 1 0 100-2 1 1 0 000 2zm0 1.5a2.5 2.5 0 100-5 2.5 2.5 0 000 5z"
          fill-rule="evenodd"
        />
        <path
          d="M13.117 2.967h4v4h-4v-4zM13.117 8.767h4v4h-4v-4zM13.117 14.567h4v4h-4v-4z"
        />
        <path
          clip-rule="evenodd"
          d="M7.702 5a.75.75 0 01.75-.75h3a.75.75 0 110 1.5h-3a.75.75 0 01-.75-.75zM4.87 7.72a.75.75 0 00-.828.662l.746.083-.746-.083v.006L4.04 8.4l-.004.04a12.537 12.537 0 00-.04.671c-.015.44-.015 1.053.044 1.74.118 1.348.474 3.116 1.521 4.425 1.077 1.346 2.656 1.846 3.872 2.029a9.468 9.468 0 002.05.078l.136-.013.039-.004.012-.001h.005s.001-.001-.092-.745l.093.744a.75.75 0 00-.185-1.489M5.533 8.547v.007l-.003.028a11.019 11.019 0 00-.035.581c-.014.395-.014.944.04 1.559.11 1.258.432 2.66 1.197 3.617.736.92 1.875 1.325 2.924 1.482a7.968 7.968 0 001.81.057l.022-.002h.003M4.87 7.72a.75.75 0 01.662.827L4.87 7.72z"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M4.43 7.806a.75.75 0 00-.301 1.017l.659-.358-.66.358.001.001.001.001.002.003.004.008.011.02.04.067c.033.054.08.129.143.219a6.467 6.467 0 002.9 2.286c1.06.418 2.177.537 3.005.558a11.195 11.195 0 001.328-.046 5.62 5.62 0 00.084-.009l.025-.003h.007l.003-.001-.099-.744.1.744a.75.75 0 00-.198-1.487h-.001l-.015.002a9.684 9.684 0 01-1.196.045c-.737-.019-1.659-.126-2.492-.455a4.967 4.967 0 01-2.219-1.746 3.02 3.02 0 01-.115-.178l-.002-.005a.75.75 0 00-1.016-.297z"
          fill-rule="evenodd"
        />
      </svg>
      <svg
        class="icon-inline d-none d-lg-inline-block"
        fill="currentColor"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M4.5 5.5a1 1 0 100-2 1 1 0 000 2zm0 1.5a2.5 2.5 0 100-5 2.5 2.5 0 000 5z"
          fill-rule="evenodd"
        />
        <path
          d="M13.117 2.967h4v4h-4v-4zM13.117 8.767h4v4h-4v-4zM13.117 14.567h4v4h-4v-4z"
        />
        <path
          clip-rule="evenodd"
          d="M7.702 5a.75.75 0 01.75-.75h3a.75.75 0 110 1.5h-3a.75.75 0 01-.75-.75zM4.87 7.72a.75.75 0 00-.828.662l.746.083-.746-.083v.006L4.04 8.4l-.004.04a12.537 12.537 0 00-.04.671c-.015.44-.015 1.053.044 1.74.118 1.348.474 3.116 1.521 4.425 1.077 1.346 2.656 1.846 3.872 2.029a9.468 9.468 0 002.05.078l.136-.013.039-.004.012-.001h.005s.001-.001-.092-.745l.093.744a.75.75 0 00-.185-1.489M5.533 8.547v.007l-.003.028a11.019 11.019 0 00-.035.581c-.014.395-.014.944.04 1.559.11 1.258.432 2.66 1.197 3.617.736.92 1.875 1.325 2.924 1.482a7.968 7.968 0 001.81.057l.022-.002h.003M4.87 7.72a.75.75 0 01.662.827L4.87 7.72z"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M4.43 7.806a.75.75 0 00-.301 1.017l.659-.358-.66.358.001.001.001.001.002.003.004.008.011.02.04.067c.033.054.08.129.143.219a6.467 6.467 0 002.9 2.286c1.06.418 2.177.537 3.005.558a11.195 11.195 0 001.328-.046 5.62 5.62 0 00.084-.009l.025-.003h.007l.003-.001-.099-.744.1.744a.75.75 0 00-.198-1.487h-.001l-.015.002a9.684 9.684 0 01-1.196.045c-.737-.019-1.659-.126-2.492-.455a4.967 4.967 0 01-2.219-1.746 3.02 3.02 0 01-.115-.178l-.002-.005a.75.75 0 00-1.016-.297z"
          fill-rule="evenodd"
        />
      </svg>
      <span
        class="d-none d-lg-inline-block ml-1"
      >
        Campaigns
      </span>
    </a>
  </li>
  <li
    class="nav-item mx-1"
  >
    <a
      class="nav-link btn btn-primary"
      href="/sign-in"
    >
      Sign in
    </a>
  </li>
  <li
    class="nav-item"
  >
    <a
      class="nav-link"
      href="/help"
      rel="noopener"
      target="_blank"
    >
      Docs
    </a>
  </li>
  <li
    class="nav-item"
  >
    <a
      class="nav-link"
      href="https://about.sourcegraph.com"
      rel="noopener"
      target="_blank"
    >
      About
    </a>
  </li>
  <li
    class="nav-item"
  >
    <span
      class="command-list__popover-button btn btn-link "
      id="command-list-popover-button-3"
      role="button"
    >
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M20,19V7H4V19H20M20,3A2,2 0 0,1 22,5V19A2,2 0 0,1 20,21H4A2,2 0 0,1 2,19V5C2,3.89 2.9,3 4,3H20M13,17V15H18V17H13M9.58,13L5.57,9H8.4L11.7,12.3C12.09,12.69 12.09,13.33 11.7,13.72L8.42,17H5.59L9.58,13Z"
        />
      </svg>
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M7,10L12,15L17,10H7Z"
        />
      </svg>
    </span>
  </li>
</ul>
`;

exports[`NavLinks unauthed Sourcegraph.com /search 1`] = `
<ul
  class="nav-links nav align-items-center pl-2 pr-1"
>
  <li
    class="nav-item"
  >
    <a
      class="nav-link btn btn-link px-1 text-decoration-none d-flex align-items-center"
      href="/extensions"
    >
      <svg
        class="mdi-icon icon-inline d-lg-none"
        data-tooltip="Extensions"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M22,13.5C22,15.26 20.7,16.72 19,16.96V20A2,2 0 0,1 17,22H13.2V21.7A2.7,2.7 0 0,0 10.5,19C9,19 7.8,20.21 7.8,21.7V22H4A2,2 0 0,1 2,20V16.2H2.3C3.79,16.2 5,15 5,13.5C5,12 3.79,10.8 2.3,10.8H2V7A2,2 0 0,1 4,5H7.04C7.28,3.3 8.74,2 10.5,2C12.26,2 13.72,3.3 13.96,5H17A2,2 0 0,1 19,7V10.04C20.7,10.28 22,11.74 22,13.5M17,15H18.5A1.5,1.5 0 0,0 20,13.5A1.5,1.5 0 0,0 18.5,12H17V7H12V5.5A1.5,1.5 0 0,0 10.5,4A1.5,1.5 0 0,0 9,5.5V7H4V9.12C5.76,9.8 7,11.5 7,13.5C7,15.5 5.75,17.2 4,17.88V20H6.12C6.8,18.25 8.5,17 10.5,17C12.5,17 14.2,18.25 14.88,20H17V15Z"
        />
      </svg>
      <svg
        class="mdi-icon icon-inline d-none d-lg-inline-block"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M22,13.5C22,15.26 20.7,16.72 19,16.96V20A2,2 0 0,1 17,22H13.2V21.7A2.7,2.7 0 0,0 10.5,19C9,19 7.8,20.21 7.8,21.7V22H4A2,2 0 0,1 2,20V16.2H2.3C3.79,16.2 5,15 5,13.5C5,12 3.79,10.8 2.3,10.8H2V7A2,2 0 0,1 4,5H7.04C7.28,3.3 8.74,2 10.5,2C12.26,2 13.72,3.3 13.96,5H17A2,2 0 0,1 19,7V10.04C20.7,10.28 22,11.74 22,13.5M17,15H18.5A1.5,1.5 0 0,0 20,13.5A1.5,1.5 0 0,0 18.5,12H17V7H12V5.5A1.5,1.5 0 0,0 10.5,4A1.5,1.5 0 0,0 9,5.5V7H4V9.12C5.76,9.8 7,11.5 7,13.5C7,15.5 5.75,17.2 4,17.88V20H6.12C6.8,18.25 8.5,17 10.5,17C12.5,17 14.2,18.25 14.88,20H17V15Z"
        />
      </svg>
      <span
        class="d-none d-lg-inline-block ml-1"
      >
        Extensions
      </span>
    </a>
  </li>
  <li
    class="nav-item"
  >
    <a
      class="nav-link btn btn-link px-1 text-decoration-none d-flex align-items-center"
      href="/campaigns"
    >
      <svg
        class="icon-inline d-lg-none"
        fill="currentColor"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M4.5 5.5a1 1 0 100-2 1 1 0 000 2zm0 1.5a2.5 2.5 0 100-5 2.5 2.5 0 000 5z"
          fill-rule="evenodd"
        />
        <path
          d="M13.117 2.967h4v4h-4v-4zM13.117 8.767h4v4h-4v-4zM13.117 14.567h4v4h-4v-4z"
        />
        <path
          clip-rule="evenodd"
          d="M7.702 5a.75.75 0 01.75-.75h3a.75.75 0 110 1.5h-3a.75.75 0 01-.75-.75zM4.87 7.72a.75.75 0 00-.828.662l.746.083-.746-.083v.006L4.04 8.4l-.004.04a12.537 12.537 0 00-.04.671c-.015.44-.015 1.053.044 1.74.118 1.348.474 3.116 1.521 4.425 1.077 1.346 2.656 1.846 3.872 2.029a9.468 9.468 0 002.05.078l.136-.013.039-.004.012-.001h.005s.001-.001-.092-.745l.093.744a.75.75 0 00-.185-1.489M5.533 8.547v.007l-.003.028a11.019 11.019 0 00-.035.581c-.014.395-.014.944.04 1.559.11 1.258.432 2.66 1.197 3.617.736.92 1.875 1.325 2.924 1.482a7.968 7.968 0 001.81.057l.022-.002h.003M4.87 7.72a.75.75 0 01.662.827L4.87 7.72z"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M4.43 7.806a.75.75 0 00-.301 1.017l.659-.358-.66.358.001.001.001.001.002.003.004.008.011.02.04.067c.033.054.08.129.143.219a6.467 6.467 0 002.9 2.286c1.06.418 2.177.537 3.005.558a11.195 11.195 0 001.328-.046 5.62 5.62 0 00.084-.009l.025-.003h.007l.003-.001-.099-.744.1.744a.75.75 0 00-.198-1.487h-.001l-.015.002a9.684 9.684 0 01-1.196.045c-.737-.019-1.659-.126-2.492-.455a4.967 4.967 0 01-2.219-1.746 3.02 3.02 0 01-.115-.178l-.002-.005a.75.75 0 00-1.016-.297z"
          fill-rule="evenodd"
        />
      </svg>
      <svg
        class="icon-inline d-none d-lg-inline-block"
        fill="currentColor"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M4.5 5.5a1 1 0 100-2 1 1 0 000 2zm0 1.5a2.5 2.5 0 100-5 2.5 2.5 0 000 5z"
          fill-rule="evenodd"
        />
        <path
          d="M13.117 2.967h4v4h-4v-4zM13.117 8.767h4v4h-4v-4zM13.117 14.567h4v4h-4v-4z"
        />
        <path
          clip-rule="evenodd"
          d="M7.702 5a.75.75 0 01.75-.75h3a.75.75 0 110 1.5h-3a.75.75 0 01-.75-.75zM4.87 7.72a.75.75 0 00-.828.662l.746.083-.746-.083v.006L4.04 8.4l-.004.04a12.537 12.537 0 00-.04.671c-.015.44-.015 1.053.044 1.74.118 1.348.474 3.116 1.521 4.425 1.077 1.346 2.656 1.846 3.872 2.029a9.468 9.468 0 002.05.078l.136-.013.039-.004.012-.001h.005s.001-.001-.092-.745l.093.744a.75.75 0 00-.185-1.489M5.533 8.547v.007l-.003.028a11.019 11.019 0 00-.035.581c-.014.395-.014.944.04 1.559.11 1.258.432 2.66 1.197 3.617.736.92 1.875 1.325 2.924 1.482a7.968 7.968 0 001.81.057l.022-.002h.003M4.87 7.72a.75.75 0 01.662.827L4.87 7.72z"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M4.43 7.806a.75.75 0 00-.301 1.017l.659-.358-.66.358.001.001.001.001.002.003.004.008.011.02.04.067c.033.054.08.129.143.219a6.467 6.467 0 002.9 2.286c1.06.418 2.177.537 3.005.558a11.195 11.195 0 001.328-.046 5.62 5.62 0 00.084-.009l.025-.003h.007l.003-.001-.099-.744.1.744a.75.75 0 00-.198-1.487h-.001l-.015.002a9.684 9.684 0 01-1.196.045c-.737-.019-1.659-.126-2.492-.455a4.967 4.967 0 01-2.219-1.746 3.02 3.02 0 01-.115-.178l-.002-.005a.75.75 0 00-1.016-.297z"
          fill-rule="evenodd"
        />
      </svg>
      <span
        class="d-none d-lg-inline-block ml-1"
      >
        Campaigns
      </span>
    </a>
  </li>
  <li
    class="nav-item mx-1"
  >
    <a
      class="nav-link btn btn-primary"
      href="/sign-in"
    >
      Sign in
    </a>
  </li>
  <li
    class="nav-item"
  >
    <a
      class="nav-link"
      href="/help"
      rel="noopener"
      target="_blank"
    >
      Docs
    </a>
  </li>
  <li
    class="nav-item"
  >
    <a
      class="nav-link"
      href="https://about.sourcegraph.com"
      rel="noopener"
      target="_blank"
    >
      About
    </a>
  </li>
  <li
    class="nav-item"
  >
    <span
      class="command-list__popover-button btn btn-link "
      id="command-list-popover-button-4"
      role="button"
    >
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M20,19V7H4V19H20M20,3A2,2 0 0,1 22,5V19A2,2 0 0,1 20,21H4A2,2 0 0,1 2,19V5C2,3.89 2.9,3 4,3H20M13,17V15H18V17H13M9.58,13L5.57,9H8.4L11.7,12.3C12.09,12.69 12.09,13.33 11.7,13.72L8.42,17H5.59L9.58,13Z"
        />
      </svg>
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M7,10L12,15L17,10H7Z"
        />
      </svg>
    </span>
  </li>
</ul>
`;

exports[`NavLinks unauthed self-hosted /foo 1`] = `
<ul
  class="nav-links nav align-items-center pl-2 pr-1"
>
  <li
    class="nav-item d-sm-none"
  >
    <a
      class="nav-link"
      href="/search"
    >
      Search
    </a>
  </li>
  <li
    class="nav-item"
  >
    <a
      class="nav-link btn btn-link px-1 text-decoration-none d-flex align-items-center"
      href="/extensions"
    >
      <svg
        class="mdi-icon icon-inline d-lg-none"
        data-tooltip="Extensions"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M22,13.5C22,15.26 20.7,16.72 19,16.96V20A2,2 0 0,1 17,22H13.2V21.7A2.7,2.7 0 0,0 10.5,19C9,19 7.8,20.21 7.8,21.7V22H4A2,2 0 0,1 2,20V16.2H2.3C3.79,16.2 5,15 5,13.5C5,12 3.79,10.8 2.3,10.8H2V7A2,2 0 0,1 4,5H7.04C7.28,3.3 8.74,2 10.5,2C12.26,2 13.72,3.3 13.96,5H17A2,2 0 0,1 19,7V10.04C20.7,10.28 22,11.74 22,13.5M17,15H18.5A1.5,1.5 0 0,0 20,13.5A1.5,1.5 0 0,0 18.5,12H17V7H12V5.5A1.5,1.5 0 0,0 10.5,4A1.5,1.5 0 0,0 9,5.5V7H4V9.12C5.76,9.8 7,11.5 7,13.5C7,15.5 5.75,17.2 4,17.88V20H6.12C6.8,18.25 8.5,17 10.5,17C12.5,17 14.2,18.25 14.88,20H17V15Z"
        />
      </svg>
      <svg
        class="mdi-icon icon-inline d-none d-lg-inline-block"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M22,13.5C22,15.26 20.7,16.72 19,16.96V20A2,2 0 0,1 17,22H13.2V21.7A2.7,2.7 0 0,0 10.5,19C9,19 7.8,20.21 7.8,21.7V22H4A2,2 0 0,1 2,20V16.2H2.3C3.79,16.2 5,15 5,13.5C5,12 3.79,10.8 2.3,10.8H2V7A2,2 0 0,1 4,5H7.04C7.28,3.3 8.74,2 10.5,2C12.26,2 13.72,3.3 13.96,5H17A2,2 0 0,1 19,7V10.04C20.7,10.28 22,11.74 22,13.5M17,15H18.5A1.5,1.5 0 0,0 20,13.5A1.5,1.5 0 0,0 18.5,12H17V7H12V5.5A1.5,1.5 0 0,0 10.5,4A1.5,1.5 0 0,0 9,5.5V7H4V9.12C5.76,9.8 7,11.5 7,13.5C7,15.5 5.75,17.2 4,17.88V20H6.12C6.8,18.25 8.5,17 10.5,17C12.5,17 14.2,18.25 14.88,20H17V15Z"
        />
      </svg>
      <span
        class="d-none d-lg-inline-block ml-1"
      >
        Extensions
      </span>
    </a>
  </li>
  <li
    class="nav-item"
  >
    <a
      class="nav-link btn btn-link px-1 text-decoration-none d-flex align-items-center"
      href="/campaigns"
    >
      <svg
        class="icon-inline d-lg-none"
        fill="currentColor"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M4.5 5.5a1 1 0 100-2 1 1 0 000 2zm0 1.5a2.5 2.5 0 100-5 2.5 2.5 0 000 5z"
          fill-rule="evenodd"
        />
        <path
          d="M13.117 2.967h4v4h-4v-4zM13.117 8.767h4v4h-4v-4zM13.117 14.567h4v4h-4v-4z"
        />
        <path
          clip-rule="evenodd"
          d="M7.702 5a.75.75 0 01.75-.75h3a.75.75 0 110 1.5h-3a.75.75 0 01-.75-.75zM4.87 7.72a.75.75 0 00-.828.662l.746.083-.746-.083v.006L4.04 8.4l-.004.04a12.537 12.537 0 00-.04.671c-.015.44-.015 1.053.044 1.74.118 1.348.474 3.116 1.521 4.425 1.077 1.346 2.656 1.846 3.872 2.029a9.468 9.468 0 002.05.078l.136-.013.039-.004.012-.001h.005s.001-.001-.092-.745l.093.744a.75.75 0 00-.185-1.489M5.533 8.547v.007l-.003.028a11.019 11.019 0 00-.035.581c-.014.395-.014.944.04 1.559.11 1.258.432 2.66 1.197 3.617.736.92 1.875 1.325 2.924 1.482a7.968 7.968 0 001.81.057l.022-.002h.003M4.87 7.72a.75.75 0 01.662.827L4.87 7.72z"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M4.43 7.806a.75.75 0 00-.301 1.017l.659-.358-.66.358.001.001.001.001.002.003.004.008.011.02.04.067c.033.054.08.129.143.219a6.467 6.467 0 002.9 2.286c1.06.418 2.177.537 3.005.558a11.195 11.195 0 001.328-.046 5.62 5.62 0 00.084-.009l.025-.003h.007l.003-.001-.099-.744.1.744a.75.75 0 00-.198-1.487h-.001l-.015.002a9.684 9.684 0 01-1.196.045c-.737-.019-1.659-.126-2.492-.455a4.967 4.967 0 01-2.219-1.746 3.02 3.02 0 01-.115-.178l-.002-.005a.75.75 0 00-1.016-.297z"
          fill-rule="evenodd"
        />
      </svg>
      <svg
        class="icon-inline d-none d-lg-inline-block"
        fill="currentColor"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M4.5 5.5a1 1 0 100-2 1 1 0 000 2zm0 1.5a2.5 2.5 0 100-5 2.5 2.5 0 000 5z"
          fill-rule="evenodd"
        />
        <path
          d="M13.117 2.967h4v4h-4v-4zM13.117 8.767h4v4h-4v-4zM13.117 14.567h4v4h-4v-4z"
        />
        <path
          clip-rule="evenodd"
          d="M7.702 5a.75.75 0 01.75-.75h3a.75.75 0 110 1.5h-3a.75.75 0 01-.75-.75zM4.87 7.72a.75.75 0 00-.828.662l.746.083-.746-.083v.006L4.04 8.4l-.004.04a12.537 12.537 0 00-.04.671c-.015.44-.015 1.053.044 1.74.118 1.348.474 3.116 1.521 4.425 1.077 1.346 2.656 1.846 3.872 2.029a9.468 9.468 0 002.05.078l.136-.013.039-.004.012-.001h.005s.001-.001-.092-.745l.093.744a.75.75 0 00-.185-1.489M5.533 8.547v.007l-.003.028a11.019 11.019 0 00-.035.581c-.014.395-.014.944.04 1.559.11 1.258.432 2.66 1.197 3.617.736.92 1.875 1.325 2.924 1.482a7.968 7.968 0 001.81.057l.022-.002h.003M4.87 7.72a.75.75 0 01.662.827L4.87 7.72z"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M4.43 7.806a.75.75 0 00-.301 1.017l.659-.358-.66.358.001.001.001.001.002.003.004.008.011.02.04.067c.033.054.08.129.143.219a6.467 6.467 0 002.9 2.286c1.06.418 2.177.537 3.005.558a11.195 11.195 0 001.328-.046 5.62 5.62 0 00.084-.009l.025-.003h.007l.003-.001-.099-.744.1.744a.75.75 0 00-.198-1.487h-.001l-.015.002a9.684 9.684 0 01-1.196.045c-.737-.019-1.659-.126-2.492-.455a4.967 4.967 0 01-2.219-1.746 3.02 3.02 0 01-.115-.178l-.002-.005a.75.75 0 00-1.016-.297z"
          fill-rule="evenodd"
        />
      </svg>
      <span
        class="d-none d-lg-inline-block ml-1"
      >
        Campaigns
      </span>
    </a>
  </li>
  <li
    class="nav-item mx-1"
  >
    <a
      class="nav-link btn btn-primary"
      href="/sign-in"
    >
      Sign in
    </a>
  </li>
  <li
    class="nav-item"
  >
    <a
      class="nav-link"
      href="/help"
      rel="noopener"
      target="_blank"
    >
      Docs
    </a>
  </li>
  <li
    class="nav-item"
  >
    <span
      class="command-list__popover-button btn btn-link "
      id="command-list-popover-button-1"
      role="button"
    >
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M20,19V7H4V19H20M20,3A2,2 0 0,1 22,5V19A2,2 0 0,1 20,21H4A2,2 0 0,1 2,19V5C2,3.89 2.9,3 4,3H20M13,17V15H18V17H13M9.58,13L5.57,9H8.4L11.7,12.3C12.09,12.69 12.09,13.33 11.7,13.72L8.42,17H5.59L9.58,13Z"
        />
      </svg>
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M7,10L12,15L17,10H7Z"
        />
      </svg>
    </span>
  </li>
</ul>
`;

exports[`NavLinks unauthed self-hosted /search 1`] = `
<ul
  class="nav-links nav align-items-center pl-2 pr-1"
>
  <li
    class="nav-item"
  >
    <a
      class="nav-link btn btn-link px-1 text-decoration-none d-flex align-items-center"
      href="/extensions"
    >
      <svg
        class="mdi-icon icon-inline d-lg-none"
        data-tooltip="Extensions"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M22,13.5C22,15.26 20.7,16.72 19,16.96V20A2,2 0 0,1 17,22H13.2V21.7A2.7,2.7 0 0,0 10.5,19C9,19 7.8,20.21 7.8,21.7V22H4A2,2 0 0,1 2,20V16.2H2.3C3.79,16.2 5,15 5,13.5C5,12 3.79,10.8 2.3,10.8H2V7A2,2 0 0,1 4,5H7.04C7.28,3.3 8.74,2 10.5,2C12.26,2 13.72,3.3 13.96,5H17A2,2 0 0,1 19,7V10.04C20.7,10.28 22,11.74 22,13.5M17,15H18.5A1.5,1.5 0 0,0 20,13.5A1.5,1.5 0 0,0 18.5,12H17V7H12V5.5A1.5,1.5 0 0,0 10.5,4A1.5,1.5 0 0,0 9,5.5V7H4V9.12C5.76,9.8 7,11.5 7,13.5C7,15.5 5.75,17.2 4,17.88V20H6.12C6.8,18.25 8.5,17 10.5,17C12.5,17 14.2,18.25 14.88,20H17V15Z"
        />
      </svg>
      <svg
        class="mdi-icon icon-inline d-none d-lg-inline-block"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M22,13.5C22,15.26 20.7,16.72 19,16.96V20A2,2 0 0,1 17,22H13.2V21.7A2.7,2.7 0 0,0 10.5,19C9,19 7.8,20.21 7.8,21.7V22H4A2,2 0 0,1 2,20V16.2H2.3C3.79,16.2 5,15 5,13.5C5,12 3.79,10.8 2.3,10.8H2V7A2,2 0 0,1 4,5H7.04C7.28,3.3 8.74,2 10.5,2C12.26,2 13.72,3.3 13.96,5H17A2,2 0 0,1 19,7V10.04C20.7,10.28 22,11.74 22,13.5M17,15H18.5A1.5,1.5 0 0,0 20,13.5A1.5,1.5 0 0,0 18.5,12H17V7H12V5.5A1.5,1.5 0 0,0 10.5,4A1.5,1.5 0 0,0 9,5.5V7H4V9.12C5.76,9.8 7,11.5 7,13.5C7,15.5 5.75,17.2 4,17.88V20H6.12C6.8,18.25 8.5,17 10.5,17C12.5,17 14.2,18.25 14.88,20H17V15Z"
        />
      </svg>
      <span
        class="d-none d-lg-inline-block ml-1"
      >
        Extensions
      </span>
    </a>
  </li>
  <li
    class="nav-item"
  >
    <a
      class="nav-link btn btn-link px-1 text-decoration-none d-flex align-items-center"
      href="/campaigns"
    >
      <svg
        class="icon-inline d-lg-none"
        fill="currentColor"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M4.5 5.5a1 1 0 100-2 1 1 0 000 2zm0 1.5a2.5 2.5 0 100-5 2.5 2.5 0 000 5z"
          fill-rule="evenodd"
        />
        <path
          d="M13.117 2.967h4v4h-4v-4zM13.117 8.767h4v4h-4v-4zM13.117 14.567h4v4h-4v-4z"
        />
        <path
          clip-rule="evenodd"
          d="M7.702 5a.75.75 0 01.75-.75h3a.75.75 0 110 1.5h-3a.75.75 0 01-.75-.75zM4.87 7.72a.75.75 0 00-.828.662l.746.083-.746-.083v.006L4.04 8.4l-.004.04a12.537 12.537 0 00-.04.671c-.015.44-.015 1.053.044 1.74.118 1.348.474 3.116 1.521 4.425 1.077 1.346 2.656 1.846 3.872 2.029a9.468 9.468 0 002.05.078l.136-.013.039-.004.012-.001h.005s.001-.001-.092-.745l.093.744a.75.75 0 00-.185-1.489M5.533 8.547v.007l-.003.028a11.019 11.019 0 00-.035.581c-.014.395-.014.944.04 1.559.11 1.258.432 2.66 1.197 3.617.736.92 1.875 1.325 2.924 1.482a7.968 7.968 0 001.81.057l.022-.002h.003M4.87 7.72a.75.75 0 01.662.827L4.87 7.72z"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M4.43 7.806a.75.75 0 00-.301 1.017l.659-.358-.66.358.001.001.001.001.002.003.004.008.011.02.04.067c.033.054.08.129.143.219a6.467 6.467 0 002.9 2.286c1.06.418 2.177.537 3.005.558a11.195 11.195 0 001.328-.046 5.62 5.62 0 00.084-.009l.025-.003h.007l.003-.001-.099-.744.1.744a.75.75 0 00-.198-1.487h-.001l-.015.002a9.684 9.684 0 01-1.196.045c-.737-.019-1.659-.126-2.492-.455a4.967 4.967 0 01-2.219-1.746 3.02 3.02 0 01-.115-.178l-.002-.005a.75.75 0 00-1.016-.297z"
          fill-rule="evenodd"
        />
      </svg>
      <svg
        class="icon-inline d-none d-lg-inline-block"
        fill="currentColor"
        height="20"
        viewBox="0 0 20 20"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M4.5 5.5a1 1 0 100-2 1 1 0 000 2zm0 1.5a2.5 2.5 0 100-5 2.5 2.5 0 000 5z"
          fill-rule="evenodd"
        />
        <path
          d="M13.117 2.967h4v4h-4v-4zM13.117 8.767h4v4h-4v-4zM13.117 14.567h4v4h-4v-4z"
        />
        <path
          clip-rule="evenodd"
          d="M7.702 5a.75.75 0 01.75-.75h3a.75.75 0 110 1.5h-3a.75.75 0 01-.75-.75zM4.87 7.72a.75.75 0 00-.828.662l.746.083-.746-.083v.006L4.04 8.4l-.004.04a12.537 12.537 0 00-.04.671c-.015.44-.015 1.053.044 1.74.118 1.348.474 3.116 1.521 4.425 1.077 1.346 2.656 1.846 3.872 2.029a9.468 9.468 0 002.05.078l.136-.013.039-.004.012-.001h.005s.001-.001-.092-.745l.093.744a.75.75 0 00-.185-1.489M5.533 8.547v.007l-.003.028a11.019 11.019 0 00-.035.581c-.014.395-.014.944.04 1.559.11 1.258.432 2.66 1.197 3.617.736.92 1.875 1.325 2.924 1.482a7.968 7.968 0 001.81.057l.022-.002h.003M4.87 7.72a.75.75 0 01.662.827L4.87 7.72z"
          fill-rule="evenodd"
        />
        <path
          clip-rule="evenodd"
          d="M4.43 7.806a.75.75 0 00-.301 1.017l.659-.358-.66.358.001.001.001.001.002.003.004.008.011.02.04.067c.033.054.08.129.143.219a6.467 6.467 0 002.9 2.286c1.06.418 2.177.537 3.005.558a11.195 11.195 0 001.328-.046 5.62 5.62 0 00.084-.009l.025-.003h.007l.003-.001-.099-.744.1.744a.75.75 0 00-.198-1.487h-.001l-.015.002a9.684 9.684 0 01-1.196.045c-.737-.019-1.659-.126-2.492-.455a4.967 4.967 0 01-2.219-1.746 3.02 3.02 0 01-.115-.178l-.002-.005a.75.75 0 00-1.016-.297z"
          fill-rule="evenodd"
        />
      </svg>
      <span
        class="d-none d-lg-inline-block ml-1"
      >
        Campaigns
      </span>
    </a>
  </li>
  <li
    class="nav-item mx-1"
  >
    <a
      class="nav-link btn btn-primary"
      href="/sign-in"
    >
      Sign in
    </a>
  </li>
  <li
    class="nav-item"
  >
    <a
      class="nav-link"
      href="/help"
      rel="noopener"
      target="_blank"
    >
      Docs
    </a>
  </li>
  <li
    class="nav-item"
  >
    <span
      class="command-list__popover-button btn btn-link "
      id="command-list-popover-button-2"
      role="button"
    >
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M20,19V7H4V19H20M20,3A2,2 0 0,1 22,5V19A2,2 0 0,1 20,21H4A2,2 0 0,1 2,19V5C2,3.89 2.9,3 4,3H20M13,17V15H18V17H13M9.58,13L5.57,9H8.4L11.7,12.3C12.09,12.69 12.09,13.33 11.7,13.72L8.42,17H5.59L9.58,13Z"
        />
      </svg>
      <svg
        class="mdi-icon icon-inline"
        fill="currentColor"
        height="24"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M7,10L12,15L17,10H7Z"
        />
      </svg>
    </span>
  </li>
</ul>
`;
